sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:7: error: '(' expected but identifier found.
      if plusPetit(j,k){
         ^AlgSelectionSort:11: error: illegal start of simple expression
    }
    ^